Prevent settings toggle control from wrapping

--- a/app/assets/stylesheets/hyrax/dashboard.scss
+++ b/app/assets/stylesheets/hyrax/dashboard.scss
@@ -118,8 +118,11 @@ body.dashboard {
     }
   }
 
-  .table .date {
-    width: 13ch;
+  .table {
+     .date,
+     .action {
+      width: 13ch;
+    }
   }
 
   .list-filters {
